# starcraft

./: .clang-format  CMakeLists.txt
src/: main.cpp
src/ai/: avoidance.hpp  circle_formation.hpp  direct_pathfinding.hpp  formation.hpp  grid_formation.hpp  pathfinding.hpp  simple_avoidance.hpp
src/components/: available_to_move.hpp  build_preview.hpp  component.hpp  position.hpp  renderable.hpp  selectable.hpp
src/ecs_core/: entity_registry.hpp
src/entities/: entity.hpp
src/fsm/: fsm.hpp
src/systems/: build_system.hpp  move_system.hpp  render_system.hpp  selection_system.hpp  system.hpp  ui_system.hpp
